<resources>
    <string name="app_name">TiptCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill">Bill</string>
    <string name="percent">Percent</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total">Total</string>
    <string name="_0_0">0.0%</string>
    <string name="_0_00">$0.00</string>
    <string name="_0_00ammount">$0.00</string>
    <string name="reset">RESET</string>

    <string-array name="split_array">
        <item>No</item>
        <item>2 way</item>
        <item>3 way</item>
        <item>4 way</item>
        <item>5 way</item>
    </string-array>
</resources>
