<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.zavecz.tiptcalculator.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/background">

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mBill"
        android:text="@string/bill"
        android:layout_marginStart="30dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginTop="38dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="47dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/mPercent" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mPercent"
        android:text="@string/percent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/mPercentTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/mBill"
        app:layout_constraintTop_toTopOf="@+id/mPercentTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mTipAmount"
        android:text="@string/tip_amount"
        android:layout_marginStart="30dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/mPercent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mTotal"
        android:text="@string/total"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/mTipAmount"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/mTipAmount" />

    <EditText
        android:id="@+id/mSubtotalET"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="numberDecimal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/mPercentTV"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintLeft_toLeftOf="@+id/mPercentTV"
        app:layout_constraintRight_toRightOf="@+id/mPercentDown"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mPercentTV"
        android:text="@string/_0_0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="11dp"
        app:layout_constraintRight_toLeftOf="@+id/mPercentDown"
        android:layout_marginTop="87dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/MyButton"
        android:id="@+id/mPercentUp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_border"
        android:text="+"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSubtotalET"
        tools:layout_constraintTop_creator="1" />

    <Button
        style="@style/MyButton"
        android:id="@+id/mPercentDown"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/button_border"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/mPercentTV"
        app:layout_constraintRight_toLeftOf="@+id/mPercentUp"
        app:layout_constraintTop_toBottomOf="@+id/mPercentTV"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mTotalTV"
        android:text="@string/_0_00"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/mTipAmountTV"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/mTipAmountTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/mTipAmountTV"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/mTipAmountTV"
        android:text="@string/_0_00ammount"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/mPercentTV"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/mPercentTV"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp" />

    <Button
        android:id="@+id/mReset"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="RESET"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="59dp"
        app:layout_constraintTop_toBottomOf="@+id/perPersonLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/spinnerLabel"
        android:textStyle="bold"
        android:text="Split Bill?"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/mTotal"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp" />

    <Spinner
        android:id="@+id/splitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerLabel"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp" />

    <TextView
        style="@style/MyTextView.Label"
        android:id="@+id/perPersonLabel"
        android:text="Per Person"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/splitSpinner"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp" />

</android.support.constraint.ConstraintLayout>
